--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
           overflow:auto;
       }
       .mycontainer div {
-          width: 40%;
+          width: 45%;
           margin: 2%;
           float: left;
           background-color: lightblue;
@@ -28,11 +28,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
           width: 90%;
       }
       .container {
-          width: 100%;
+          width: 90%;
           overflow: auto;
       }
       .container div{
-          width: 80%;
+          width: 60%;
           float: none;
           margin-left: auto;
           margin-right: auto;
@@ -69,12 +69,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
   <li>Video veidošana</li> 
 </ol>
         </div>
-        <div class="container" style="width: 100%; margin-right: 15px; margin-left: 15px;">
+        <div class="container" style="width: 90%; margin-left: auto; margin-right: auto; float:none;">
             <h2 id="ra"><b>Rastrgrafika un vektorgrafika</b></h2><br>
             <div><img src="images/papildbilde.png" ></div>
             <div><img src="images/Text.png" ></div>
             <div><img src="images/zimejums.png" style="height: 600px;"></div>
         </div>
+            <div class="container1" style="width: 90%; margin-left: auto; margin-right: auto; float:none;">
         <div>
             <h2 id="wo"><b>Word</b></h2><!-- comment -->
             <img src="images/foto1.png">
@@ -84,6 +85,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <h2 id="ex"><b>Excel</b></h2>
                 <img src="images/foto2.png">
             </div>
+            </div>
+            <div class="container2" style="width: 90%; margin-left: auto; margin-right: auto; float:none;">
         <div>
             <h2><b>3d modelešana</b></h2><!-- comment -->
             <h3 style="margin-right: 20px" id="mod">Tinkercad</h3><img src="images/puzle.png">
@@ -92,9 +95,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <h2 id="vid"><b>Video veidošana</b></h2>
             <img src="images/video.png">
         </div>
-        <div class="link">
-            <a href="otrais.html" target="_blank">2.darbs</a>
+            </div>
         </div>
+        <div class="w3-panel w3-padding-large" style="width:100%; background-color: lightgray;">
+            <a href="otrais.html" target="_blank" style="color: blue;"><b>2.darbs</b></a>
         </div>
     </body>
 </html>
