--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         </div>
         <div class="w3-panel w3-padding-large" style="width:100%; background-color: lightgray;">
             <a href="otrais.html" target="_blank" style="color: blue;"><b>2.darbs</b></a>
+            <p>xxx</p>
         </div>
     </body>
 </html>
