--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </div>
         </div>
         <div class="w3-panel w3-padding-large" style="width:100%; background-color: lightgray;">
-            <a href="otrais.html" target="_blank" style="color: blue;"><b>2.darbs</b></a>
+            <a href="otrais.html" target="_blank" style="color: blue;"><b>2.darbs</b></a><br>
+            <a href="skola.html" style="color: blue;"><b>uzdevums par skolu</b></a><br>
+            <a href="mervienibas.html" style="color: blue;"><b>Uzdevums par mērvienībam</b></a><br>
+            <a href="dzd.html" style="color: blue;"><b>Uzdevums dzimšanas dienu</b></a>
         </div>
     </body>
 </html>
