--- a/otrais.html
+++ b/otrais.html
@@ -16,6 +16,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             button {
                 margin-left: 20px;
             }
+            .beigas {
+                background-color: lightgray;
+                color: blue;
+                width: 90%;
+                margin-left: auto;
+                margin-right: auto;
+            }
         </style>
         <link rel="stylesheet" href="Style.css">
     </head>
@@ -48,6 +55,13 @@ Nosakiet laiku, kad pārtraucāt darbu pie datora un atslēdzāties no interneta
         </div>
         <div><img src="images/animation new.gif" alt="social network"/></div>
         <div><a href="index.html" target="_self"><img src="images/bulta.png" id="l"></a></div>
+        <div class="beigas">
+            <p style="text-align: center;"><h2>Saites uz vingrinājumiem:</h2> </p><br>
+        <b> <a href="forma.html">Uzdevums par formu</a><br>
+        <a href="dzer.html">1. uzdevums par dzerieniem</a><br>
+        <a href="dzerdaudz.html">2. uzdevums par dzerieniem</a></b>
+        </div>
+        <br>
         <script>
           function funk1() {
               document.getElementById("pirm").style.display="none";
